# Modern-E-Commerce-Analytics-Platform

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: ecommerce_pipeline.py
airflow/plugins/: ecommerce_monitor.py
data/raw/: customers.csv  products.csv
dbt/ecommerce/: dbt_project.yml  profiles.yml
dbt/ecommerce/docs/: data_quality_monitoring.md
dbt/ecommerce/macros/: test_date_in_past.sql  test_not_empty_string.sql  test_positive_value.sql  test_valid_email.sql
dbt/ecommerce/snapshots/: snap_customers.sql
dbt/ecommerce/tests/: assert_daily_revenue_consistency.sql  assert_fact_references_valid_customers.sql  assert_no_future_orders.sql  assert_one_current_version_per_customer.sql  assert_order_item_total_matches.sql  assert_revenue_non_negative.sql  assert_row_count_parity.sql  (+1 more)
docker/airflow/: Dockerfile  requirements.txt
docker/pgadmin/: pgpass  servers.json
docker/postgres/: Dockerfile
docs/: architecture.md  database_design.md  metabase_dashboards.md  monitoring_architecture.md  testing_strategy.md
etl/: config.py  extract.py  generate.py  ingest.py  load.py  monitor.py  transform.py  utils.py
etl/generators/: customer_generator.py  order_generator.py  order_item_generator.py  payment_generator.py  product_generator.py
sql/init/: 01_create_raw_schema.sql
tests/: conftest.py  test_airflow_dag.py  test_extract.py  test_generators.py  test_monitor.py  test_transform.py  test_utils.py
tests/integration/: test_pipeline.sh
(+24 files in other folders)
